@@ -4,13 +4,18 @@
 namespace Marvel
 {
 
-	void ThrowPythonException(const std::string& message)
+	void ThrowPythonException(const std::string& message, bool line)
 	{
 
 		std::string fullMessage = "Line: %d \t" + message;
 
-		int line = PyFrame_GetLineNumber(PyEval_GetFrame());
-		PyErr_Format(PyExc_Exception, fullMessage.c_str(), line);
+		int lineno = 0;
+		if (line)
+		{
+			lineno = PyFrame_GetLineNumber(PyEval_GetFrame());
+		}
+
+		PyErr_Format(PyExc_Exception, fullMessage.c_str(), lineno);
 		PyErr_Print();
 	}
 
